Fix unalignment of radio buttons in Chrome
ref: bnc#587812

style.css had a "width: 32em" for all 'input' fields. Firefox
overrides this with its own style, while Chrome used it.

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -66,7 +66,6 @@ input {
   color: #666;
   font-size: 1em;
   background: #fcfcfc;
-  width: 32em;
 }
   input[type="text"] {
     width: 32em;
